--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.pythonPath": "C:\\Users\\NetUser\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
-    "liveServer.settings.port": 5501
+    "liveServer.settings.port": 5501,
+    "git.ignoreLimitWarning": true
 }
