--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\NetUser\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
+    "python.pythonPath": "C:\\Users\\NetUser\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
     "liveServer.settings.port": 5501,
     "git.ignoreLimitWarning": true
 }
