after cdn integration

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 /media
+/templates/workshop/video.html
 td
 Scripts
 ruversity-spaces-key.txt
 Postgres_server_credentials.docx
 new_user_credentials(1).csv
+/project/settings.py
